# KEX

./: Pid_controller.py  README.md  control_example.py  example_world3_standard.py  lektest.py  main.py  pollution_test.py  pyproject.toml  tempCodeRunnerFile.py
pyworld3/: __init__.py  agriculture.py  capital.py  functions_table_world3.json  pollution.py  population.py  resource.py  specials.py  tempCodeRunnerFile.py  test_sectors.py  utils.py  world3.py
tests/: test.py
