[tool.poetry]
name = "pyworld3"
version = "1.2"
description = "The World3 model revisited in Python."
authors = ["Charles Vanwynsberghe", "Matthieu Barreau <barreau@kth.se>"]
license = "CeCILL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
SciPy = "^1.11.4"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
